Installation
***********************************************
See INSTALL file for details

ChangeLog
***********************************************

Version 0.113
 Added:
  - Now q4wine save last user selected prefix and dir;
  - Added "open directory" menu items via xdg-utils;
  - Added "open directory" menu items via winefile;
  - Added xdg-utils support (note: now it is in the depends list)
  - Added q4wine-cli console utility for wine applications and prefixes management.
  - Added libq4wine implementation;
  - Added translation file for Portuguese (Brazil) by Marcio Moraes;
  - Added *.xpm filter to icon import patten;
  - Added http proxy support for winetriks;
  - Improved icon display widget;
  - Added Drag & Drop support;
  - Added Drag support q4wine icons export;
  - Added Drop support for wine .exe and .com files;
  - Added Drop support for wine .bat files (Now autoadd wineconsole binary args);
  - Added splitter for programs and icons lists;
  - Added command line option for q4wine (See q4wine --help for details);

 Fixed:
  - Linux: Improved wine process list build (thx Sergey Kishchenko (tilarids));
  - Cleanup q4wine tmp directory on exit;
  - Some fixes for q4wine.desktop (thx to Eugene Pivnev);
  - Fixed GUI bug: Text fields size, on some desktop configurations, are too small to edit;
  - Fixed a lot of English spelling errors (thx Sergey Kishchenko (tilarids));
  - First steps for source code documentation via Doxygen....;
  - Total code reorganize;
  - Database engine rewrite;
  - Many fixes for q4wine.desktop file (thx for Kyrill Detinov);

Version 0.112-r1
 Fixed:
  - Fixed compilation with Qt-4.4.X;
  - Removed QDir::Files from Directory selection dialogs;
  - Fixed compilation warning for registry.h;
  - Fixed warnings ignoring return value of 'int system(const char*)' on 1666 and 1647 lines;

Version 0.112
 core:
  New:
  - Added Sidebar Urls for Run and IconSettings file dialogs;